--- a/composer.json
+++ b/composer.json
@@ -25,14 +25,14 @@
 	"illuminate/database": "5.0.*",
         "illuminate/filesystem": "5.0.*",
         "illuminate/redis": "5.0.*",
-        "jenssegers/mongodb": "*",
+        "jenssegers/mongodb": "2.1.3",
 	"predis/predis": "1.1.*@dev",
-	"itsgoingd/slim-services": "dev-master",
-        "itsgoingd/slim-facades": "dev-master",
+	"itsgoingd/slim-services": "1.*",
+        "itsgoingd/slim-facades": "1.*",
         "cartalyst/sentry": "2.1.5",
-        "ircmaxell/password-compat": "dev-master",
+        "ircmaxell/password-compat": "1.0.4",
 	"maxmind-db/reader": "1.*",
-        "webpatser/laravel-uuid": "dev-master",
+        "webpatser/laravel-uuid": "1.*",
 	"opendradio/radio-bundle": "*",
 	"opendradio/messenger-bundle": "*"
     },
