--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,8 @@
 	"illuminate/database": "5.0.*",
         "illuminate/filesystem": "5.0.*",
         "illuminate/redis": "5.0.*",
+	"illuminate/translation": "5.0.*",
+	"illuminate/validation": "5.0.*",
         "jenssegers/mongodb": "2.1.3",
 	"predis/predis": "1.1.*@dev",
 	"itsgoingd/slim-services": "1.*",
@@ -40,9 +42,15 @@
         "phpunit/phpunit": "~4.5.0"
     },
     "autoload": {
+	"psr-4": {
+	    "App\\": "app/"
+	},
         "psr-0": {
 	    "OpenDRadio\\Rest": "src/"
-        }
+        },
+        "files": [
+	    "app/helpers.php"
+	]
     },
     "autoload-dev": {
         "classmap": [
@@ -52,17 +60,17 @@
     },
     "scripts": {
         "post-install-cmd": [
-	    "chmod -R 755 app/storage public",
+	    "chmod -R 755 storage public",
             "echo 'Downloading GeoLite2 City database from Maxmind'",
 	    "wget http://geolite.maxmind.com/download/geoip/database/GeoLite2-City.mmdb.gz -P provider/GeoIP -N -q",
-	    "gunzip -c provider/GeoIP/GeoLite2-City.mmdb.gz > provider/GeoIP/GeoLite2-City.mmdb",
+	    "gunzip -c provider/GeoIP/GeoLite2-City.mmdb.gz > storage/geoip/GeoLite2-City.mmdb",
 	    "echo 'Updated GeoLite2 City database'"
         ],
         "post-update-cmd": [
-	    "chmod -R 755 app/storage public",
+	    "chmod -R 755 storage public",
             "echo 'Downloading GeoLite2 City database from Maxmind'",
 	    "wget http://geolite.maxmind.com/download/geoip/database/GeoLite2-City.mmdb.gz -P provider/GeoIP -N -q",
-	    "gunzip -c provider/GeoIP/GeoLite2-City.mmdb.gz > provider/GeoIP/GeoLite2-City.mmdb",
+	    "gunzip -c provider/GeoIP/GeoLite2-City.mmdb.gz > storage/geoip/GeoLite2-City.mmdb",
 	    "echo 'Updated GeoLite2 City database'"
         ]
     },
